# build-on-bob

./: .gitignore  README.md  _bob.sh  ansible.cfg  bob.py  bob.sh  hosts.yaml  ipxe.cfg  pyproject.toml  run-dev.sh
ansible/: config.yaml  deploy-bob-server.yaml
ansible/templates/: dnsmasq.conf.j2  engine.sh.j2  engine.yaml.j2  ipxe.cfg.j2
installer/: ansible.cfg  config.yaml  install-bob.yaml  mk-overlay.sh
installer/etc_ansible/: ansible.cfg
installer/files/: bob.1.man  ipxe-x86_64.efi  snponly.efi  undionly.kpxe
installer/templates/: dnsmasq.conf.j2  engine.sh.j2  engine.yaml.j2  fetch-from-cache.sh.j2  ng-bob.conf.j2  ng-wendy-log.conf.j2  ng-wendy.conf.j2  nginx-wendy.conf.j2  populate-cache.sh.j2  robert.service.j2  wendy.service.j2
opt_bob/: alpine.ipxe.j2  alpine.sh.j2  bob.py  build.ipxe.j2  ci-user-data.j2  init-data.yaml  recipes.yaml  rescue.ipxe.j2  rescue.sh.j2  rocky-ci-user.j2  rocky.sh.j2  ubuntu.sh.j2
opt_bob/events/: README.md
opt_bob/robert/: database.py  example.py  hosts.py  hypervisors.py  init-data.yaml  ipam.py  library.py  main.py  models.py  nodes.py  opsystems.py  subnets.py  virtuals.py
opt_bob/templates/: alpine.sh.j2  ans-inventory.j2  build.ipxe.j2  fcos.ipxe.j2  fedora-ci-user.j2  fedora.sh.j2  fetch-from-cache.sh.j2  generic-ci-network.j2  generic.ks.j2  kickstart.ipxe.j2  libvirt-build-vm.j2  libvirt-host-vars.j2  libvirt-prepare.j2  libvirt-remove-vm.j2  local.ipxe.j2  populate-cache.sh.j2  proxmox-build-vm.j2  proxmox-destroy-vm.j2  proxmox-host-vars.j2  proxmox-mk-template.j2  proxmox-prepare.j2  proxmox-remove-vm.j2  (+5 more)
(+50 files in other folders)
