[project]
name = "build-on-bob"
version = "0.1.0"
description = "Cloud deployments to Virtuals and Physicals"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ansible-runner>=2.4.0",
    "datalite>=0.7.3",
    "fastapi-offline>=1.7.2",
    "fastapi[standard]>=0.115.4",
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "netaddr>=1.3.0",
    "proxmoxer>=2.1.0",
    "pyfiglet>=1.0.2",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "ruff>=0.7.1",
]
